<resources>
    <string name="app_name">EdJourney</string>
    <!-- add open and close -->
    <string name="navigation_drawer_open">Open navigation</string>
    <string name="navigation_drawer_close">Close navigation</string>
    <string name="let_s_start_learning">Let\'s Start Learning!</string>
    <string name="search_for_courses">Search for courses</string>
    <string name="choice_your_courses">Choice your courses</string>
    <string name="view_all">View All</string>
    <string name="start_learning_today">Start learning today</string>
    <string name="start_learning">Unlock the world of knowledge with Your ED JOURNEY App! Explore a
        variety of courses and enhance your skills at your own pace. Start your learning journey
        today!</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="oussama_hammoucham">Oussama Hammoucham</string>
    <string name="get_start">GEt Start</string>
    <string name="wlecome_to_java">Wlecome To java</string>
    <string name="view_profile">View Profile</string>
    <string name="PreQuiz_advices_1">Ensure a quiet environment for focus.</string>
    <string name="PreQuiz_advices_2">Read each question carefully and manage time wisely.</string>
    <string name="PreQuiz_advices_3">You can repeat the quiz multiple times.</string>
    <string name="PreQuiz_advices_4">Questions are randomized for variety.</string>
    <string name="PreQuiz_advices_5">Achieve the mentioned score to progress.</string>
    <string name="PreQuiz_advices_6">Good luck!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>