<?xml version="1.0" encoding="utf-8"?>


<!-- Navigation Drawer -->
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.quiz.PreQuizActivity"
    android:layout_gravity="start">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipChildren="false"
        android:clipToPadding="false">
        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:elevation="0dp"
            >

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:minHeight="50sp"
                app:titleTextColor="@color/colorDark"
                android:theme="?attr/actionBarTheme"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="0dp"
                app:elevation="0dp"/>

        </com.google.android.material.appbar.AppBarLayout>


        <!--<ImageView
            android:id="@+id/toggleMenuIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/logout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/logout"
            app:srcCompat="@drawable/ic_arrow_left"  />

        <ImageView
            android:id="@+id/logout"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/user_ic" />-->




        <TextView
            android:id="@+id/content_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="18dp"
            android:layout_marginTop="60dp"
            android:fontFamily="@font/nunito_bold"
            android:text="01"
            android:textColor="@color/grey_200"
            android:textSize="100sp"
            android:textFontWeight="900"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <TextView
            android:id="@+id/course_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/nunito_bold"
            android:text="Java: Quiz 1"
            android:textColor="#0D1333"
            android:textSize="24sp"
            android:textFontWeight="700"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />

        <TextView
            android:id="@+id/chapter_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:fontFamily="@font/nunito_bold"
            android:text="Introduction to Java"
            android:textColor="@color/blue_grey_700"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/course_name"
            app:layout_constraintTop_toBottomOf="@+id/course_name" />

        <!-- Have a linear layout with an icon in cercle shape, and beside it two textview -->
        <LinearLayout
            android:id="@+id/infos_item_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/chapter_name">

            <ImageView
                android:id="@+id/infos_item_1_icon"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:padding="10dp"
                android:src="@drawable/ic_format_list_bulleted_type"
                android:background="@drawable/bg_icon"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <TextView
                    android:id="@+id/infos_item_1_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:fontFamily="@font/nunito_bold"
                    android:text="15"
                    android:textColor="@color/colorSecondaryDark"
                    android:textFontWeight="600"
                    android:textSize="22sp" />

                <TextView
                    android:id="@+id/infos_item_1_subtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:fontFamily="@font/nunito"
                    android:text="Uniq Choices Questions"
                    android:textColor="@color/blue_grey_700"
                    android:textSize="16sp" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/infos_item_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/infos_item_1">

            <ImageView
                android:id="@+id/infos_item_2_icon"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:padding="10dp"
                android:src="@drawable/ic_timer_outline"
                android:background="@drawable/bg_icon"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <TextView
                    android:id="@+id/infos_item_2_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:fontFamily="@font/nunito_bold"
                    android:text="2 mins"
                    android:textColor="@color/colorSecondaryDark"
                    android:textFontWeight="600"
                    android:textSize="22sp" />

                <TextView
                    android:id="@+id/infos_item_2_subtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:fontFamily="@font/nunito"
                    android:text="Per Question"
                    android:textColor="@color/blue_grey_700"
                    android:textSize="16sp" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/infos_item_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/infos_item_2">

            <ImageView
                android:id="@+id/infos_item_3_icon"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:padding="10dp"
                android:src="@drawable/ic_medal_outline"
                android:background="@drawable/bg_icon"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <TextView
                    android:id="@+id/infos_item_3_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:fontFamily="@font/nunito_bold"
                    android:text="90%"
                    android:textColor="@color/colorSecondaryDark"
                    android:textFontWeight="600"
                    android:textSize="22sp" />

                <TextView
                    android:id="@+id/infos_item_3_subtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:fontFamily="@font/nunito"
                    android:text="For Badge &amp; unlock next chapter"
                    android:textColor="@color/blue_grey_700"
                    android:textSize="16sp" />
            </LinearLayout>

        </LinearLayout>

        <!-- Have line seperator -->
        <View
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="16dp"
            android:background="@color/grey_400"
            app:layout_constraintTop_toBottomOf="@+id/infos_item_3" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/footer_layout"
            app:layout_constraintTop_toBottomOf="@+id/line"
            android:gravity="center_vertical"
            >

        <TextView
            android:id="@+id/before_start_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:text="Before you start"
            android:fontFamily="@font/nunito_bold"
            android:textFontWeight="600"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/line" />


        <TableLayout
            android:id="@+id/advices"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintTop_toBottomOf="@+id/before_start_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">
            >
            <TableRow
                android:layout_height="fill_parent"
                android:layout_width="fill_parent">
                <TextView
                    android:layout_column="1"
                    android:textSize="18sp"
                    android:textColor="@color/grey_800"
                    android:fontFamily="@font/nunito"
                    android:textFontWeight="500"
                    android:layout_marginRight="10dp"
                    android:text="●"/>

                <TextView
                    android:layout_column="2"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/PreQuiz_advices_1"
                    android:textSize="18sp"
                    android:textColor="@color/grey_800"
                    android:fontFamily="@font/nunito"
                    android:layout_gravity="start"
                    android:textFontWeight="500" />
            </TableRow>

            <TableRow
                android:layout_height="fill_parent"
                android:layout_width="fill_parent">
                <TextView
                    android:layout_column="1"
                    android:textSize="18sp"
                    android:textColor="@color/grey_800"
                    android:fontFamily="@font/nunito"
                    android:textFontWeight="500"
                    android:layout_marginRight="10dp"
                    android:text="●"/>

                <TextView
                    android:layout_column="2"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/PreQuiz_advices_2"
                    android:textSize="18sp"
                    android:textColor="@color/grey_800"
                    android:fontFamily="@font/nunito"
                    android:layout_gravity="start"
                    android:textFontWeight="500" />
            </TableRow>

            <TableRow
                android:layout_height="fill_parent"
                android:layout_width="fill_parent">
                <TextView
                    android:layout_column="1"
                    android:textSize="18sp"
                    android:textColor="@color/grey_800"
                    android:fontFamily="@font/nunito"
                    android:textFontWeight="500"
                    android:layout_marginRight="10dp"
                    android:text="●"/>

                <TextView
                    android:layout_column="2"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/PreQuiz_advices_3"
                    android:textSize="18sp"
                    android:textColor="@color/grey_800"
                    android:fontFamily="@font/nunito"
                    android:layout_gravity="start"
                    android:textFontWeight="500" />
            </TableRow>

            <TableRow
                android:layout_height="fill_parent"
                android:layout_width="fill_parent">
                <TextView
                    android:layout_column="1"
                    android:textSize="18sp"
                    android:textColor="@color/grey_800"
                    android:fontFamily="@font/nunito"
                    android:textFontWeight="500"
                    android:layout_marginRight="10dp"
                    android:text="●"/>

                <TextView
                    android:layout_column="2"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/PreQuiz_advices_4"
                    android:textSize="18sp"
                    android:textColor="@color/grey_800"
                    android:fontFamily="@font/nunito"
                    android:layout_gravity="start"
                    android:textFontWeight="500" />
            </TableRow>

            <TableRow
                android:layout_height="fill_parent"
                android:layout_width="fill_parent">
                <TextView
                    android:layout_column="1"
                    android:textSize="18sp"
                    android:textColor="@color/grey_800"
                    android:fontFamily="@font/nunito"
                    android:textFontWeight="500"
                    android:layout_marginRight="10dp"
                    android:text="●"/>

                <TextView
                    android:layout_column="2"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/PreQuiz_advices_5"
                    android:textSize="18sp"
                    android:textColor="@color/grey_800"
                    android:fontFamily="@font/nunito"
                    android:layout_gravity="start"
                    android:textFontWeight="500" />
            </TableRow>


        </TableLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/footer_layout"
            android:layout_width="0dp"
            android:layout_height="75dp"
            android:background="@drawable/buy_layout_bg"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <Button
                android:id="@+id/start_quiz"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/buy_button_bg"
                android:padding="15dp"
                android:text="@string/get_start"
                android:textColor="@color/white"
                android:textSize="20sp"
                />

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/navigation_drawer_header"
        app:menu="@menu/navigation_drawer_menu" />
</androidx.drawerlayout.widget.DrawerLayout>
